fixed title sizing on small screens

--- a/style.css
+++ b/style.css
@@ -77,6 +77,16 @@ h1,h2,h3 {
 		margin: 20px;
 		margin-bottom: 0;
 	}
+
+	.title-block {
+		height: 150px;
+	}
+
+	.title-block h1 {
+		text-align: center;
+		color: #FFFFFF;
+		font-size: 50px;
+	}
 }
 
 /********** Navigation Bar Small Screens **********/
